--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cntr-player",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^7.1.0",
+    "rollup-plugin-json": "^2.1.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^0.2.0",
     "rollup-plugin-replace": "^1.1.1",
