--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "autoprefixer": "^7.0.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.23.0",
     "babili": "^0.0.12",
     "cssnano": "^3.10.0",
