--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "semver": "^5.3.0"
+    "semver": "^5.3.0",
+    "spark-md5": "^3.0.0"
   }
 }
